<resources>
    <string name="app_name">Bicho da Sorte</string>
    <string name="btn_grupo">GRUPO</string>
    <string name="btn_dezena">DEZENA</string>
    <string name="titulo_main">SELECIONE UMA OPÇÃO</string>
    <string name="btn_centena">CENTENA</string>
    <string name="btn_milhar">MILHAR</string>
    <string name="btn_duqueGrupo">DUQUE DE GRUPO</string>
    <string name="btn_duqueDezena">DUQUE DE DEZENA</string>
    <string name="btn_ternoGrupo">TERNO DE GRUPO</string>
    <string name="btn_ternoDezena">TERNO DE DEZENA</string>
    <string name="titulo_grupo">G  R  U  P  O</string>
    <string name="num_grupo">00</string>
    <string name="btn_sortearGrupo">SORTEAR GRUPO</string>
    <string name="tituloDezena">D  E  Z  E  N  A</string>
    <string name="num_dezena">00</string>
    <string name="btn_sortearDezena">SORTEAR DEZENA</string>
    <string name="text_msgDezenaSorteada" />
    <string name="nome_avestruz">AVESTRUZ</string>
    <string name="nome_aguia">ÁGUIA</string>
    <string name="nome_burro">BURRO</string>
    <string name="nome_borboleta">BORBOLETA</string>
    <string name="nome_cachorro">CACHORRO</string>
    <string name="nome_cabra">CABRA</string>
    <string name="nome_carneiro">CARNEIRO</string>
    <string name="nome_camelo">CAMELO</string>
    <string name="nome_cobra">COBRA</string>
    <string name="nome_coelho">COELHO</string>
    <string name="nome_cavalo">CAVALO</string>
    <string name="nome_elefante">ELEFANTE</string>
    <string name="nome_galo">GALO</string>
    <string name="nome_gato">GATO</string>
    <string name="nome_jacare">JACARÉ</string>
    <string name="nome_leao">LEÃO</string>
    <string name="nome_macaco">MACACO</string>
    <string name="nome_porco">PORCO</string>
    <string name="nome_pavao">PAVÃO</string>
    <string name="nome_peru">PERU</string>
    <string name="nome_touro">TOURO</string>
    <string name="nome_tigre">TIGRE</string>
    <string name="nome_urso">URSO</string>
    <string name="nome_veado">VEADO</string>
    <string name="nome_vaca">VACA</string>
    <string name="msg_1">AVESTRUZ (1 - 2 - 3 - 4)</string>
    <string name="msg_2">ÁGUIA (5 - 6 - 7 - 8)</string>
    <string name="msg_3">BURRO (9 - 10 - 11 -12)</string>
    <string name="msg_4">BORBOLETA (13 - 14 - 15 - 16)</string>
    <string name="msg_5">CACHORRO (17 - 18 - 19 - 20)</string>
    <string name="msg_6">CABRA (21 - 22 - 23 - 24)</string>
    <string name="msg_7">CARNEIRO (25 - 26 - 27 - 28)</string>
    <string name="msg_8">CAMELO (29 - 30 - 31 - 32)</string>
    <string name="zero">00</string>
    <string name="um">01</string>
    <string name="dois">02</string>
    <string name="trez">03</string>
    <string name="quatro">04</string>
    <string name="cinco">05</string>
    <string name="seis">06</string>
    <string name="sete">07</string>
    <string name="oito">08</string>
    <string name="nove">09</string>
    <string name="msg_9">COBRA (33 - 34 - 35 - 36)</string>
    <string name="msg_10">COELHO (37 - 38 - 39 - 40)</string>
    <string name="msg_11">CAVALO (41 - 42 - 43 - 44)</string>
    <string name="msg_12">ELEFANTE (45 - 46 - 47 - 48)</string>
    <string name="msg_13">GALO (49 - 50 - 51 - 52)</string>
    <string name="msg_14">GATO (53 - 54 - 55 - 56)</string>
    <string name="msg_15">JACARÉ (57 - 58 - 59 - 60)</string>
    <string name="msg_16">LEÃO (61 - 62 - 63 - 64)</string>
    <string name="msg_17">MACACO (65 - 66 - 67 - 68)</string>
    <string name="msg_18">PORCO (69 - 70 - 71 - 72)</string>
    <string name="msg_19">PAVÃO (73 - 74 - 75 - 76)</string>
    <string name="msg_20">PERU (77 - 78 - 79 - 80)</string>
    <string name="msg_21">TOURO (81 - 82 - 83 - 84)</string>
    <string name="msg_22">TIGRE (85 - 86 - 87 - 88)</string>
    <string name="msg_23">URSO (89 - 90 - 91 - 92)</string>
    <string name="msg_24">VEADO (93 - 94 - 95 - 96)</string>
    <string name="msg_25">VACA (97 - 98 - 99 - 00)</string>
    <string name="dez">10</string>
    <string name="onze">11</string>
    <string name="doze">12</string>
    <string name="treze">13</string>
    <string name="quatorze">14</string>
    <string name="quinze">15</string>
    <string name="dezesseis">16</string>
    <string name="dezessete">17</string>
    <string name="dezoito">18</string>
    <string name="dezenove">19</string>
    <string name="vinte">20</string>
    <string name="vinte_um">21</string>
    <string name="vinte_dois">22</string>
    <string name="vinte_trez">23</string>
    <string name="vinte_quatro">24</string>
    <string name="vinte_cinco">25</string>
    <string name="titulo_centena">C  E  N  T  E  N  A</string>
    <string name="centena_sorteada">000</string>
    <string name="btnSortearCentena">SORTEAR CENTENA</string>
    <string name="cent_0">000</string>
    <string name="cent_1">001</string>
    <string name="cent_2">002</string>
    <string name="cent_3">003</string>
    <string name="cent_4">004</string>
    <string name="cent_5">005</string>
    <string name="cent_6">006</string>
    <string name="cent_7">007</string>
    <string name="cent_8">008</string>
    <string name="cent_9">009</string>
    <string name="cent_10">010</string>
    <string name="cent_11">011</string>
    <string name="cent_12">012</string>
    <string name="cent_13">013</string>
    <string name="cent_14">014</string>
    <string name="cent_15">015</string>
    <string name="cent_16">016</string>
    <string name="cent_17">017</string>
    <string name="cent_18">018</string>
    <string name="cent_19">019</string>
    <string name="cent_20">020</string>
    <string name="cent_21">021</string>
    <string name="cent_22">022</string>
    <string name="cent_23">023</string>
    <string name="cent_24">024</string>
    <string name="cent_25">025</string>
    <string name="cent_26">026</string>
    <string name="cent_27">027</string>
    <string name="cent_28">028</string>
    <string name="cent_29">029</string>
    <string name="cent_30">030</string>
    <string name="cent_31">031</string>
    <string name="cent_32">032</string>
    <string name="cent_33">033</string>
    <string name="cent_34">034</string>
    <string name="cent_35">035</string>
    <string name="cent_36">036</string>
    <string name="cent_37">037</string>
    <string name="cent_38">038</string>
    <string name="cent_39">039</string>
    <string name="cent_40">040</string>
    <string name="cent_41">041</string>
    <string name="cent_42">042</string>
    <string name="cent_43">043</string>
    <string name="cent_44">044</string>
    <string name="cent_45">045</string>
    <string name="cent_46">046</string>
    <string name="cent_47">047</string>
    <string name="cent_48">048</string>
    <string name="cent_49">049</string>
    <string name="cent_50">050</string>
    <string name="cent_51">051</string>
    <string name="cent_52">052</string>
    <string name="cent_53">053</string>
    <string name="cent_54">054</string>
    <string name="cent_55">055</string>
    <string name="cent_56">056</string>
    <string name="cent_57">057</string>
    <string name="cent_58">058</string>
    <string name="cent_59">059</string>
    <string name="cent_60">060</string>
    <string name="cent_61">061</string>
    <string name="cent_62">062</string>
    <string name="cent_63">063</string>
    <string name="cent_64">064</string>
    <string name="cent_65">065</string>
    <string name="cent_66">066</string>
    <string name="cent_67">067</string>
    <string name="cent_68">068</string>
    <string name="cent_69">069</string>
    <string name="cent_70">070</string>
    <string name="cent_71">071</string>
    <string name="cent_72">072</string>
    <string name="cent_73">073</string>
    <string name="cent_74">074</string>
    <string name="cent_75">075</string>
    <string name="cent_76">076</string>
    <string name="cent_77">077</string>
    <string name="cent_78">078</string>
    <string name="cent_79">079</string>
    <string name="cent_80">080</string>
    <string name="cent_81">081</string>
    <string name="cent_82">082</string>
    <string name="cent_83">083</string>
    <string name="cent_84">084</string>
    <string name="cent_85">085</string>
    <string name="cent_86">086</string>
    <string name="cent_87">087</string>
    <string name="cent_88">088</string>
    <string name="cent_89">089</string>
    <string name="cent_90">090</string>
    <string name="cent_91">091</string>
    <string name="cent_92">092</string>
    <string name="cent_93">093</string>
    <string name="cent_94">094</string>
    <string name="cent_95">095</string>
    <string name="cent_96">096</string>
    <string name="cent_97">097</string>
    <string name="cent_98">098</string>
    <string name="cent_99">099</string>
    <string name="titulo_milhar">M  I  L  H  A  R</string>
    <string name="milhar_sorteada">000</string>
    <string name="btn_sortearMilhar">SORTEAR MILHAR</string>
    <string name="titulo_duque_grupo">DUQUE DE GRUPO</string>
    <string name="prim_grupo">00</string>
    <string name="seg_grupo">00</string>
    <string name="btn_prim_sorteio">SORTEAR 1º GRUPO</string>
    <string name="btn_seg_sorteio">SORTEAR 2º GRUPO</string>
    <string name="seu_palpite_para_hoje">Seu palpite para hoje é:</string>
    <string name="titulo_duq_dezena">DUQUE DE DEZENA</string>
    <string name="duq_dez_sorteado">00</string>
    <string name="btn_sortear_pdezena">SORTEAR 1ª DEZENA</string>
    <string name="btn_sortear_sdezena">SORTEAR 2ª DEZENA</string>
    <string name="msg_boa_sorte">BOA SORTE !</string>
    <string name="titulo_terno_grupo">TERNO DE GRUPO</string>
    <string name="grupo_sorteado">00</string>
    <string name="btn_p_grupo">SORTEAR 1ª GRUPO</string>
    <string name="btn_s_grupo">SORTEAR 2ª GRUPO</string>
    <string name="btn_t_grupo">SORTEAR 3º GRUPO</string>
    <string name="terno_dezena">TERNO DE DEZENA</string>
    <string name="terno_dez_sorteada">00</string>
    <string name="btn_pterno_dezena">SORTEAR 1ª DEZENA</string>
    <string name="brn_sterno_dezena">SORTEAR 2ª DEZENA</string>
    <string name="btn_tterno_dezena">SORTEAR 3ª DEZENA</string>
    <string name="texto_msg_duq_dezena">\Seu palpite para hoje é:          \n          \</string>
    <string name="duq_10">10</string>
    <string name="duq_11">11</string>
    <string name="duq_12">12</string>
    <string name="duq_13">13</string>
    <string name="duq_14">14</string>
    <string name="duq_15">15</string>
    <string name="duq_16">16</string>
    <string name="duq_17">17</string>
    <string name="duq_18">18</string>
    <string name="duq_19">19</string>
    <string name="duq_20">20</string>
    <string name="duq_21">21</string>
    <string name="duq_22">22</string>
    <string name="duq_23">23</string>
    <string name="duq_24">24</string>
    <string name="duq_25">25</string>
    <string name="titulo_principal">OBRIGADO POR BAIXAR\n BICHO DA SORTE</string>
    <string name="texto_principal">
        ATENÇÃO\nEste aplicativo não realiza apostas\n
        Apenas fornece palpites para seu jogo\n
        BOA SORTE
    </string>
</resources>
